src/snapshots/mirror_clone__python_version__tests__ >tv1.0 >n .snap
---
source: src/python_version.rs
expression: "Version::parse(input)"
---
Ok(
    Version {
        epoch: 0,
        chunks: [
            1,
        ],
        pre: None,
        post: None,
        dev: None,
        local: None,
    },
)
