src/snapshots/mirror_clone__python_version__tests__0.009.snap
---
source: src/python_version.rs
expression: "Version::parse(input)"
---
Ok(
    Version {
        epoch: 0,
        chunks: [
            0,
            9,
        ],
        pre: None,
        post: None,
        dev: None,
        local: None,
    },
)
