src/snapshots/mirror_clone__python_version__tests__1!1.0.snap
---
source: src/python_version.rs
expression: "Version::parse(input)"
---
Ok(
    Version {
        epoch: 1,
        chunks: [
            1,
        ],
        pre: None,
        post: None,
        dev: None,
        local: None,
    },
)
