src/snapshots/mirror_clone__python_version__tests__1.0-r4.snap
---
source: src/python_version.rs
expression: "Version::parse(input)"
---
Ok(
    Version {
        epoch: 0,
        chunks: [
            1,
        ],
        pre: None,
        post: Some(
            4,
        ),
        dev: None,
        local: None,
    },
)
