src/snapshots/mirror_clone__python_version__tests__1.0_1.snap
---
source: src/python_version.rs
expression: "Version::parse(input)"
---
Err(
    Error {
        input: "_1",
        code: Eof,
    },
)
