src/snapshots/mirror_clone__python_version__tests__1.0a2.dev456.snap
---
source: src/python_version.rs
expression: "Version::parse(input)"
---
Ok(
    Version {
        epoch: 0,
        chunks: [
            1,
        ],
        pre: Some(
            Alpha(
                2,
            ),
        ),
        post: None,
        dev: Some(
            456,
        ),
        local: None,
    },
)
